fixes alignment in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1447,7 +1447,7 @@ select.list-dt:focus {
   cursor: pointer;
   align-items: flex-start;
   max-height: 394px;
-  min-height: 294px;
+  min-height: 209px;
   padding-top: 2rem;
   /* padding-top: 57px; */
 }
